crates/tests/libs/bindgen/data/error/property_get_and_set/input.rdl

#[win32]
mod Test {
    interface IFoo {
        #[get]
        #[set]
        Value: i32;
    }
}
        